# figma-to-rag

./: .gitignore  README.md  components.jsonl  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.py
figma_to_rag/: __init__.py  cli.py  converter.py  exceptions.py  models.py  models_utils.py
figma_to_rag/processors/: openai_processor.py
tests/: test_cli.py  test_converter.py
